# game-creator-api

./: .env.example  .gitignore  AUTH_SETUP.md  Cargo.toml  FRONTEND_INTEGRATION.md  README.md  TEST_EXAMPLES.md  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250529_055640_create_creator_and_game_tables.rs  m20250529_061644_rename_creator_to_creators.rs  m20250529_070451_rename_game_to_games.rs  m20250529_080000_create_users_table.rs
src/: database.rs  main.rs  routes.rs
src/controllers/: auth_controller.rs  creator_controller.rs  game_controller.rs  mod.rs
src/dtos/: auth_dto.rs  creator_dto.rs  game_dto.rs  mod.rs
src/middleware/: auth.rs
src/models/: creator.rs  game.rs  mod.rs  user.rs
