[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"

sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

anyhow = "1.0"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"

# Auth dependencies
jsonwebtoken = "9.2"
bcrypt = "0.15"
futures-util = "0.3"
